# mainlayer-pydantic-ai

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: buyer_agent.py  marketplace_pipeline.py  paywalled_agent.py  pipeline.py  vendor_agent.py
src/mainlayer_pydantic_ai/: __init__.py  agent.py  decorator.py  deps.py  tools.py
tests/: test_tools.py
