[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainlayer-pydantic-ai"
version = "0.1.0"
description = "PydanticAI tools and agent factory for Mainlayer payments"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mainlayer", email = "support@mainlayer.xyz" },
]
keywords = ["mainlayer", "pydantic-ai", "payments", "ai-agents", "monetization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-ai>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://mainlayer.xyz"
Documentation = "https://github.com/mainlayer/mainlayer-pydantic-ai"
Repository = "https://github.com/mainlayer/mainlayer-pydantic-ai"
"Bug Tracker" = "https://github.com/mainlayer/mainlayer-pydantic-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mainlayer_pydantic_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/mainlayer_pydantic_ai"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
